# roasting-startup

./: .env.example  .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
migrations/: 001_initial.sql
nix/: module.nix
roasting-api/: Cargo.toml
roasting-api/src/: main.rs
roasting-app/: Cargo.toml
roasting-app/src/: app_context.rs  lib.rs
roasting-app/src/application/: generate_roast.rs  mod.rs
roasting-app/src/domain/: mod.rs  persisted_roast.rs  roast.rs  startup_info.rs  user.rs  vote.rs
roasting-app/src/infrastructure/: mod.rs
roasting-app/src/infrastructure/auth/: google_oauth.rs  mod.rs
roasting-app/src/infrastructure/cloudflare/: mod.rs  solver.rs
roasting-app/src/infrastructure/db/: mod.rs  roast_repository.rs  user_repository.rs  vote_repository.rs
roasting-app/src/infrastructure/db/entities/: mod.rs  roast.rs  user.rs  vote.rs
roasting-app/src/infrastructure/local_llm/: mod.rs  model.rs
roasting-app/src/infrastructure/openrouter/: client.rs  mod.rs  prompt.rs  types.rs
roasting-app/src/infrastructure/scraper/: mod.rs  website_scraper.rs
roasting-app/src/infrastructure/security/: cost_tracker.rs  input_sanitizer.rs  mod.rs  rate_limiter.rs
roasting-errors/: Cargo.toml
roasting-errors/src/: app_error.rs
roasting-ui/: Cargo.toml
roasting-ui/src/: lib.rs
roasting-ui/src/components/: error_display.rs  loading_spinner.rs  mod.rs  roast_display.rs  url_input.rs
roasting-ui/src/pages/: home.rs  mod.rs
style/: _components.scss  _variables.scss  main.scss  roasting-startup.scss
