[workspace]
resolver = "2"
members = ["roasting-app", "roasting-ui", "roasting-api", "roasting-errors"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
server_fn = "0.8"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.22"
url = "2"

thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
governor = "0.8"
dashmap = "6"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
regex-lite = "0.1"

# Database (SeaORM)
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }

# Auth & Sessions
oauth2 = "5.0.0-rc.1"
tower-sessions = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde", "js"] }
time = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[[workspace.metadata.leptos]]
name = "roasting-startup"
output-name = "roasting-startup"
bin-package = "roasting-api"
lib-package = "roasting-ui"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
