[package]
name = "roasting-app"
version.workspace = true
edition.workspace = true

[dependencies]
roasting-errors = { path = "../roasting-errors" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Always needed for domain types
uuid.workspace = true
chrono.workspace = true

reqwest = { workspace = true, optional = true }
scraper = { workspace = true, optional = true }
url = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

dashmap = { workspace = true, optional = true }
regex-lite = { workspace = true, optional = true }

headless_chrome = { version = "1", optional = true }
urlencoding = { version = "2", optional = true }

# Database & Auth
sea-orm = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }

# Local LLM dependencies
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.20", optional = true }
rand = { version = "0.8", optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
ssr = ["dep:reqwest", "dep:scraper", "dep:url", "dep:tracing", "dep:dashmap", "dep:regex-lite", "dep:urlencoding", "dep:tokio", "dep:sea-orm", "dep:oauth2", "roasting-errors/ssr"]
headless = ["ssr", "dep:headless_chrome"]
local-llm = ["ssr", "dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:rand", "dep:tokio"]
